--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <footer>
         <div class="container">
             <p class="attribution">
-                Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Your Name Here</a>.
+                Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Emad Jaber</a>.
             </p>
         </div>
 
